# moos-ivp-2680

./: .gitignore  CMakeLists.txt  README  build.sh
missions/lab_06_alpha_return_now/: alpha.moos
missions/lab_06_henry_gilda_baseline/: clean.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/lab_07_distributed_tsp/: init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/lab_08_baseline/: init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plugs.moos
missions/lab_09_charlie_dana_baseline/: init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_vehicle.moos
missions/lab_14_rescue_baseline/: clean.sh  gameday.txt  gameday2.txt  gameday3.txt  get_scout.sh  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  mit_00.txt  mit_xyz.txt  plugs.moos  prelaunch.sh  quick_res.sh  rescue_apps.txt  results.txt  results_all_may12.txt  show.sh  swim_file.txt  vapps.txt
missions/rescue_baseline/: meta_shoreside.moos
missions/rescue_baseline_new/: .gitignore  clean.sh  launch.sh
src/: CMakeLists.txt
src/app_swimview/: CMakeLists.txt
src/pPointAssignEval/: CMakeLists.txt  PointAssignEval.cpp  PointAssignEval.h  PointAssignEval_Info.cpp  PointAssignEval_Info.h  main.cpp
src/uFldHazardSensor/: HazardSensor_MOOSApp.cpp
(+9 files in other folders)
